FIX: pad the top a bit when navbar is collapsed on mobile

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,11 +3,12 @@ html {
 }
 
 body {
-  background: url('/media/homepage_background_cropped.jpg') no-repeat center center fixed;
+  background: url("/media/homepage_background_cropped.jpg") no-repeat center
+    center fixed;
   background-size: cover;
   height: calc(100vh - 164px);
   color: #555;
-  font-family: 'Lato';
+  font-family: "Lato";
 }
 
 /* from Bulma */
@@ -74,22 +75,33 @@ body {
 
 /* Slightly larger container on xl screens */
 @media (min-width: 1200px) {
-.container {
-  max-width: 80%;
-}
+  .container {
+    max-width: 80%;
+  }
 }
 
 /* fixed top navbar only on medium and up */
 @media (min-width: 992px) {
   .fixed-top-desktop-only {
-      position: fixed;
-      top: 0;
-      right: 0;
-      left: 0;
-      z-index: 1030;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1030;
   }
 
   .header-container {
-      padding-top: 164px;
+    padding-top: 164px;
+  }
+}
+
+/* pad the top a bit when navbar is collapsed on mobile */
+@media (max-width: 991px) {
+  .header-container {
+    padding-top: 116px;
+  }
+
+  body {
+    height: calc(100vh - 116px);
   }
 }
